Version 2.6.0
-----------------------------------------------------------------------
17 November 2008
+ Fixed user installation in German. Special thanks to Hilmar for
pointing this out.

14 November 2008
+ Site contact copied from hub

5 November 2008
+ Fixed delete link.
+ Current_User - Added "secured" function to Current_User. Works like
  authorized but uses salted urls.

31 October 2008
+ Put in a local_user setting in authorization. My Page disabled if
  local_user is false.

27 October 2008
+ Authkeys can be salted with special keys.
+ Added function verifySaltedUrl which verifies the authkey in the
  current url.

10 October 2008
+ Added display name to pager search

2 October 2008
+ Reduced language list
+ Updated: conf/languages.php

1 October 2008
+ Added option to use control panel fly out menu.
+ Dependency on new controlpanel.
+ Updated : templates/my_page/user_setting.tpl


23 September 2008
+ Moved security log before error page call.

17 September 2008
+ php 5 formatting added.
+ Session checks added to allow and authorized functions.
+ Fixed bug: activating and deactivating a user was not affecting the
  group (Thanks Verdon).
+ Script tag permission added (will require update)
+ Current_User's init function will create a blank user object if no
  id is sent to it.

8 September 2008
+ Template tag named PANEL added. More descriptive than MODULES
+ Added user panel named css.tpl and made it default. The template
  can be completely styled within css.
+ Updated: templates/usermenus/css.tpl

13 August 2008
+ Fixed  giveItemPermission function. Wasn't saving group permissions
  properly.

12 August 2008
+ Icons substituted from admin links.
+ Fixed registerpermissions function. Was missing content parameter.
+ Updated: img/permission.png

27 June 2008
+ Removed call to help module. Using new slider javascript instead.

19 June 2008
+ Added cacheQueries to the user pager. Delete was dropping preferences.